# prefix_tools

./: CMakeLists.txt  README.md  prefix_tools.vix  vix.json
examples/: diff_range_add_example.cpp  prefix_sum_example.cpp  range_sum_queries_example.cpp
include/prefix_tools/: prefix_tools.hpp
tests/: test_basic.cpp
